<resources>
    <string name="app_name">Star Wars Soundboard</string>
    <string name="context_menu_item1">Add to favorites</string>
    <string name="context_menu_item2">Remove from favorites</string>
    <string name="button_get_help_youre_no_match_for_him_hes_a_sith_lord">Get help, you\'re no match for him, he\'s a Sith Lord!</string>
    <string name="button_chancellor_palpatine_sith_lords_are_our_speciality">Chancellor Palpatine, Sith Lords are our speciality</string>
    <string name="button_your_swords_please_we_dont_want_to_make_a_mess_of_things_in_front_of_the_chancellor">Your swords, please, we don\'t want to make a mess of things in front of the Chancellor</string>
    <string name="button_ive_been_looking_forward_to_this">I\'ve been looking forward to this</string>
    <string name="button_my_powers_have_doubled_since_the_last_time_we_met_count">My powers have doubled since the last time we met, Count</string>
    <string name="button_good_twice_the_pride_double_the_fall">Good, twice the pride, double the fall</string>
    <string name="button_yeah">Yeah</string>
    <string name="button_i_sense_great_fear_in_you_skywalker">I sense great fear in you, Skywalker</string>
    <string name="button_you_have_hate_you_have_anger_but_you_dont_use_them">You have hate, you have anger, but you don\'t use them</string>
    <string name="button_good_anakin_good">Good, Anakin, good</string>
    <string name="button_kill_him_kill_him_now">Kill him, kill him now</string>
    <string name="button_i_shouldnt">I shouldn\'t</string>
    <string name="button_do_it">Do it</string>
    <string name="button_anakin_kills_dooku">*Anakin kills Dooku*</string>
    <string name="button_you_did_well_anakin">You did well Anakin</string>
    <string name="button_he_was_too_dangerous_to_be_kept_alive">He was too dangerous to be kept alive</string>
    <string name="button_i_shouldnt_have_done_that_its_not_the_jedi_way">I shouldn\'t have done that, it\'s not the Jedi way</string>
    <string name="button_it_is_only_natural_he_cut_off_your_arm_you_wanted_revenge">It is only natural, he cut off your arm, you wanted revenge</string>
    <string name="button_remember_what_you_told_me_about_your_mother">Remember what you told me about your mother</string>
    <string name="button_now_we_must_leave">Now we must leave</string>
    <string name="button_he_seems_to_be_all_right">He seems to be all right</string>
    <string name="button_leave_him_or_well_never_make_it">Leave him or we\'ll never make it</string>
    <string name="button_his_fate_will_be_the_same_as_ours">His fate will be the same as ours</string>
    <string name="button_wait_a_minute_how_did_this_happen_were_smarter_than_this">Wait a minute, how did this happen? We\'re smarter than this</string>
    <string name="button_apparently_not">Apparently not</string>
    <string name="button_i_say_patience">I say patience</string>
    <string name="button_patience">Patience</string>
    <string name="button_r2d2_screams">*R2-D2 screams*</string>
    <string name="button_do_you_have_a_plan_b">Do you have a plan B?</string>
    <string name="button_ahh_yes">Ahh, yes</string>
    <string name="button_weve_been_waiting_for_you">We\'ve been waiting for you</string>
    <string name="button_that_wasnt_much_of_a_rescue">That wasn\'t much of a rescue</string>
    <string name="button_youre_welcome">You\'re welcome</string>
    <string name="button_grievous_coughs">*Grievous coughs*</string>
    <string name="button_i_was_expecting_someone_with_your_reputation_to_be_a_little_older">I was expecting someone with your reputation to be a little…older</string>
    <string name="button_youre_shorter_than_i_expected">You\'re shorter than I expected</string>
    <string name="button_jedi_scum">Jedi scum</string>
    <string name="button_we_have_a_job_to_do_anakin">We have a job to do, Anakin</string>
    <string name="button_try_not_to_upset_him">Try not to upset him</string>
    <string name="button_your_lightsabers_will_make_a_fine_addition_to_my_collection">Your lightsabers will make a fine addition to my collection</string>
    <string name="button_and_this_time_you_wont_escape">And this time you won\'t escape</string>
    <string name="button_crush_them">Crush them</string>
    <string name="button_make_them_suffer">Make them suffer</string>
    <string name="button_ahhhhhh">Ahhhhhh</string>
    <string name="button_dont_bother_with_them">Don\'t bother with them</string>
    <string name="button_keep_the_ship_in_orbit">Keep the ship in orbit</string>
    <string name="button_anakin_kills_droid">*Anakin kills droid*</string>
    <string name="button_you_lose_general_kenobi">You lose, General Kenobi</string>
    <string name="button_time_to_abandon_ship">Time to abandon ship</string>
    <string name="button_grievous_laughs_deviously">*Grievous laughs deviously*</string>
    <string name="button_did_you_ever_hear_the_tragedy_of_darth_plagueis_the_wise">Did you ever hear the Tragedy of Darth Plagueis the Wise?</string>
    <string name="button_i_thought_not_its_not_a_story_the_jedi_would_tell_you">I thought not, it\'s not a story the Jedi would tell you</string>
    <string name="button_its_a_sith_legend">It\'s a Sith legend</string>
    <string name="button_darth_plagueis_was_a_dark_lord_of_the_sith_so_powerful_and_so_wise_he_could_use_the_force">Darth Plagueis was a Dark Lord of the Sith so powerful and so wise he could use the Force to influence the midichlorians to create life</string>
    <string name="button_he_had_such_a_knowledge_of_the_dark_side_he_could_even_keep_the_ones_he_cared_about_from_dying">He had such a knowledge of the dark side, he could even keep the ones he cared about from dying</string>
    <string name="button_he_could_actually_save_people_from_death">He could actually save people from death?</string>
    <string name="button_the_dark_side_of_the_force_is_a_pathway_to_many_abilities_some_consider_to_be_unnatural">The dark side of the Force is a pathway to many abilities some consider to be unnatural</string>
    <string name="button_what_happened_to_him">What happened to him?</string>
    <string name="button_he_became_so_powerful_the_only_thing_he_was_afraid_of_was_losing_his_power">He became so powerful the only thing he was afraid of was losing his power, which, eventually of course he did</string>
    <string name="button_unfortunately_he_taught_his_apprentice_everything_he_knew">Unfortunately, he taught his apprentice everything he knew, then his apprentice killed him in his sleep</string>
    <string name="button_ironic">Ironic</string>
    <string name="button_he_could_save_others_from_death_but_not_himself">He could save others from death, but not himself</string>
    <string name="button_is_it_possible_to_learn_this_power">Is it possible to learn this power?</string>
    <string name="button_not_from_a_jedi">Not from a Jedi</string>
    <string name="button_greetings_young_jedi">Greetings, young Jedi</string>
    <string name="button_what_brings_you_to_our_remote_sanctuary">What brings you to our remote sanctuary?</string>
    <string name="button_theres_no_war_here_unless_you_brought_it_with_you">There\'s no war here, unless you brought it with you</string>
    <string name="button_alien_vietnamese">*Alien Vietnamese*</string>
    <string name="button_he_is_here_we_are_being_held_hostage">He is here, we are being held hostage</string>
    <string name="button_they_are_watching_us">They are watching us</string>
    <string name="button_i_understand">I understand</string>
    <string name="button_tenth_level_thousands_of_battle_droids">Tenth level, thousands of battle droids</string>
    <string name="button_tell_your_people_to_take_shelter_if_you_have_warriors_now_is_the_time">Tell your people to take shelter, if you have warriors, now is the time</string>
    <string name="button_is_he_bringing_additional_warriors_he_didnt_say">Is he bringing additional warriors? He didn\'t say</string>
    <string name="button_i_am_sending_you_to_the_mustafar_system_in_the_outer_rim">I am sending you to the Mustafar system in the Outer Rim</string>
    <string name="button_it_is_a_volcanic_planet_you_will_be_safe_there">It is a volcanic planet, you will be safe there</string>
    <string name="button_safe_chancellor_palpatine_managed_to_escape_your_grip_general">Safe? Chancellor Palpatine managed to escape your grip, General, without Count Dooku I have doubts about your ability to keep us safe</string>
    <string name="button_be_thankful_viceroy_you_have_not_found_yourself_in_my_grip">Be thankful, Viceroy, you have not found yourself in my grip</string>
    <string name="button_your_ship_is_waiting">Your ship is waiting</string>
    <string name="button_hello_there">Hello there</string>
    <string name="button_general_kenobi_you_are_a_bold_one">General Kenobi, you are a bold one</string>
    <string name="button_grievous_laughs">*Grievous laughs*</string>
    <string name="button_back_away">Back away!</string>
    <string name="button_i_will_deal_with_this_jedi_slime_myself">I will deal with this Jedi slime, myself</string>
    <string name="button_your_move">Your move</string>
    <string name="button_you_fool_ive_been_trained_in_your_jedi_arts_by_count_dooku">You fool! I\'ve been trained in your Jedi arts by Count Dooku</string>
    <string name="button_attack_kenobi">Attack, Kenobi</string>
    <string name="button_autistic_whirling">*Autistic whirling*</string>
    <string name="button_army_or_not_you_must_realize_you_are_doomed">Army or not, you must realize, you are doomed</string>
    <string name="button_oh_i_dont_think_so">Oh, I don\'t think so</string>
    <string name="button_chancellor">Chancellor</string>
    <string name="button_we_may_hope_that_master_kenobi_is_up_to_the_challenge">We may hope that Master Kenobi is up to the challenge</string>
    <string name="button_i_should_be_there_with_him">I should be there with him</string>
    <string name="button_its_upsetting_to_me_to_see_that_the_council_doesnt_seem_to_fully_appreciate_your_talents">It\'s upsetting to me to see that the Council doesn\'t seem to fully appreciate your talents</string>
    <string name="button_dont_you_wonder_why_they_wont_make_you_a_jedi_master">Don\'t you wonder why they won\'t make you a Jedi Master?</string>
    <string name="button_i_wish_i_knew">I wish I knew</string>
    <string name="button_more_and_more_i_get_the_feeling_that_im_being_excluded_from_the_council">More and more I get the feeling that I\'m being excluded from the Council</string>
    <string name="button_i_know_there_are_things_about_the_force_that_theyre_not_telling_me">I know there are things about the Force that they\'re not telling me</string>
    <string name="button_they_dont_trust_you_anakin">They don\'t trust you Anakin</string>
    <string name="button_they_see_your_future">They see your future</string>
    <string name="button_they_know_your_power_will_be_too_strong_to_control">They know your power will be too strong to control</string>
    <string name="button_you_must_break_through_the_fog_of_lies_the_jedi_have_created_around_you">You must break through the fog of lies the Jedi have created around you</string>
    <string name="button_let_me_help_you">Let me help you</string>
    <string name="button_let_me_help_you_to_know_the_subtleties_of_the_force">Let me help you to know the subtleties of the Force</string>
    <string name="button_how_do_you_know_the_ways_of_the_force">How do you know the ways of the Force?</string>
    <string name="button_my_mentor_taught_me_everything_about_the_force_even_the_nature_of_the_dark_side">My mentor taught me everything about the Force, even the nature of the dark side</string>
    <string name="button_you_know_the_dark_side">You know the dark side?</string>
</resources>