<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/buttons"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="11dp"
        android:paddingHorizontal="16dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="wait_a_minute_how_did_this_happen_were_smarter_than_this"
            android:text="@string/button_wait_a_minute_how_did_this_happen_were_smarter_than_this"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="apparently_not"
            android:text="@string/button_apparently_not"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="i_say_patience"
            android:text="@string/button_i_say_patience"
            android:textAllCaps="false"
            android:textSize="18sp"  />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="patience"
            android:text="@string/button_patience"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="r2d2_screams"
            android:text="@string/button_r2d2_screams"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="do_you_have_a_plan_b"
            android:text="@string/button_do_you_have_a_plan_b"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="ahh_yes"
            android:text="@string/button_ahh_yes"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="weve_been_waiting_for_you"
            android:text="@string/button_weve_been_waiting_for_you"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="that_wasnt_much_of_a_rescue"
            android:text="@string/button_that_wasnt_much_of_a_rescue"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="youre_welcome"
            android:text="@string/button_youre_welcome"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="grievous_coughs"
            android:text="@string/button_grievous_coughs"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="i_was_expecting_someone_with_your_reputation_to_be_a_little_older"
            android:text="@string/button_i_was_expecting_someone_with_your_reputation_to_be_a_little_older"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="youre_shorter_than_i_expected"
            android:text="@string/button_youre_shorter_than_i_expected"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="jedi_scum"
            android:text="@string/button_jedi_scum"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="we_have_a_job_to_do_anakin"
            android:text="@string/button_we_have_a_job_to_do_anakin"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="try_not_to_upset_him"
            android:text="@string/button_try_not_to_upset_him"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="your_lightsabers_will_make_a_fine_addition_to_my_collection"
            android:text="@string/button_your_lightsabers_will_make_a_fine_addition_to_my_collection"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="and_this_time_you_wont_escape"
            android:text="@string/button_and_this_time_you_wont_escape"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="crush_them"
            android:text="@string/button_crush_them"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="make_them_suffer"
            android:text="@string/button_make_them_suffer"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="ahhhhhh"
            android:text="@string/button_ahhhhhh"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="dont_bother_with_them"
            android:text="@string/button_dont_bother_with_them"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="keep_the_ship_in_orbit"
            android:text="@string/button_keep_the_ship_in_orbit"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="anakin_kills_droid"
            android:text="@string/button_anakin_kills_droid"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="you_lose_general_kenobi"
            android:text="@string/button_you_lose_general_kenobi"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:onClick="playSound"
            android:tag="time_to_abandon_ship"
            android:text="@string/button_time_to_abandon_ship"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="playSound"
            android:tag="grievous_laughs_deviously"
            android:text="@string/button_grievous_laughs_deviously"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>